Added table to Addendum B, chapter 3 (WIP)

--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -6,7 +6,7 @@
 }
 
 @article{Alessandrini1990,
-	author 		= {Alessandrini, M},
+	author 		= {Alessandrini, Maria Serena},
 	journal 	= {The Interpreters’ Newsletter},
 	pages 		= {77--80},
 	title 		= {Translating Numbers in Consecutive Interpretation: {{A}}n Experimental Study},
@@ -25,7 +25,7 @@
 }
 
 @article{Angelelli2000,
-	author 		= {Angelelli, C},
+	author 		= {Angelelli, Claudia},
 	journal 	= {Meta},
 	doi 		= {10.7202/001891ar},
 	number 		= {4},
@@ -39,7 +39,7 @@
 	author		= {Angelelli, Claudia},
 	year		= {2003},
 	title 		= {The interpersonal role of the interpreter in cross-cultural communication: {A} survey of conference,court and medical interpreters in the US, Canada, Mexico}, 
-	editor 		= {Brunette, L. and Bastin, G. and Hemlin, I. and Clarke, H.},
+	editor 		= {Brunette, Louise and Bastin, Georges L. and Hemlin, Isabelle and Clarke, Heather},
 	booktitle 	= {The Critical Link 3: Interpreters in the Community},
 	address 	= {Amsterdam/Philadelphia},
 	publisher 	= {John Benjamins}
@@ -75,7 +75,7 @@
 	address 	= {Guildford},
 	author 		= {Balogh, Katalin,  and  Hertog, Eric},
 	booktitle 	= {Videoconference and remote interpreting in criminal proceedings (pp.},
-	editor 		= {Braun, S. and Taylor, J. L.},
+	editor 		= {Braun, Sabine and Taylor, Judith L.},
 	pages 		= {101--116},
 	publisher 	= {University of Surrey},
 	title 		= {{AVIDICUS} comparative studies - part {II}: {T}raditional, video-conference and remote intepreting in police interviews},
@@ -100,7 +100,7 @@
 }
 
 @article{Bartlomiejczyk2007,
-	author 		= {Bartlomiejczyk, M},
+	author 		= {Bartlomiejczyk, Magdalena},
 	journal 	= {The Interpreter and Translator Trainer},
 	number 		= {2},
 	pages 		= {247--267},
@@ -117,10 +117,10 @@
 }
 
 @incollection{Blaauw2008,
-	author 		= {Blaauw, J. W. H.},
+	author 		= {Blaauw, Johan},
 	year		= {2008},
 	title		= {Towards a model for the training of educational interpreters},
-	editor 		= {Verhoef, M. and Du Plessis, T.},
+	editor 		= {Marlene and Du Plessis, Theodorus},
 	booktitle	= {Multilingualism and Educational Interpreting – innovation and delivery},
 	publisher	= {Van Schaik},
 	address		= {Pretoria},
@@ -128,7 +128,7 @@
 }
 
 @incollection{Berber2010,
-	author 		= {Berber, D.},
+	author 		= {Berber, Diana-Cristina},
 	year		= {2010},
 	title		= {The Use of Pedagogical and Non-pedagogical ICT in Conference Interpreter Training},
 	booktitle	= {Teaching and Testing Interpreting and Translating},
@@ -169,7 +169,7 @@
 	address 	= {Manchester},
 	author 		= {Bot, Hanneke},
 	booktitle 	= {Interpreting and Translating in Public Service Settings – Policy, Practice, Pedagogy},
-	editor 		= {De Pedro Ricoy, R. and Perez, I. and Wilson, C.},
+	editor 		= {{de Pedro Ricoy}, Raquel and Perez, {Isabelle Anne} and Wilson, Christine},
 	pages 		= {115--126},
 	publisher 	= {St Jerome},
 	title 		= {Role models in mental health interpreting},
@@ -177,7 +177,7 @@
 }
 
 @article{Braun1996,
-	author 		= {Braun, S.,  and  Clarici, A},
+	author 		= {Braun, Sabine,  and  Clarici, Andrea},
 	journal 	= {The Interpreters’ Newsletter},
 	pages 		= {85--102},
 	title 		= {Inaccuracy for Numerals in Simultaneous Interpretation: {{N}}eurolinguistic and Neuropsychological Perspectives},
@@ -189,7 +189,7 @@
 	address 	= {Guildford},
 	author 		= {Braun, Sabine},
 	booktitle 	= {Videoconference and remote interpreting in criminal proceedings},
-	editor 		= {Braun, S. and Taylor, J.},
+	editor 		= {Braun, Sabine and Taylor, Judith L.},
 	pages 		= {265--287},
 	publisher 	= {University of Surrey},
 	title 		= {Recommendations for the use of video-mediated interpreting in criminal proceedings},
@@ -211,7 +211,7 @@
 	address 	= {Guildford},
 	author 		= {Braun, Sabine and Taylor, Judith L. and Miler-Cassino, Joanna and Rybińska, Zofia and Balogh, Katalin and Hertog, Eric and Rombouts, Dirk},
 	booktitle 	= {Videoconference and Remote Interpreting in Criminal Proceedings},
-	editor 		= {Braun, S. and Taylor, J.},
+	editor 		= {Braun, Sabine and Taylor, Judith L.},
 	pages 		= {233--288},
 	publisher 	= {University of Surrey},
 	title 		= {Training in video-mediated interpreting in legal proceedings: {M}odules for interpreting students, legal interpreters and legal practitioners},
@@ -229,9 +229,9 @@
 	author 		= {Braun, Sabine},
 	year 		= {2015},
 	title 		= {Remote Interpreting},
-	editor 		= {Mikkelson, H. and Jourdenais, R.}, 
+	editor 		= {Mikkelson, Holly and Jourdenais, Renée}, 
 	booktitle 	= {Routledge Handbook of Interpreting}, 
-	address 	= {London/New York},
+	address 	= {Abingdon/New York},
 	publisher 	= {Routledge},
 	note 		= {Retrieved 31 October 2017 from \url{https://www.researchgate.net/publication/280305163_Remote_Interpreting}}
 }
@@ -254,7 +254,7 @@
 }
 
 @unpublished{Carabelli1997,
-	author 		= {Carabelli, A},
+	author 		= {Carabelli, Angela},
 	title		= {{IRIS} Interprerers’ Resource Information System. {U}na banca dati interattiva per la formazione di interpreti e traduttori}, 
 	note		= {{U}npublished dissertation}, 
 	school		= {{SSLMIT}- {U}niversita delgi Studi di Trieste},
@@ -265,7 +265,7 @@
 	author 		= {Causo, José Esteban},
 	year 		= {2011},
 	title 		= {Technical Guidelines for Remonte Interpretation},
-	editor 		= {Braun, S. and Taylor, Judith L.}, 
+	editor 		= {Braun, Sabine and Taylor, Judith L.}, 
 	booktitle 	= {Videoconference and Remote Interpreting in Criminal Proceedings},
 	address 	= {Guilford},
 	publisher 	= {University of Surrey}
@@ -280,14 +280,14 @@
 }
 
 @unpublished{Collard2017,
-  	author      = {Collard, C. and Defrancq, B.},
+  	author      = {Collard, Camille and Defrancq, Bart},
   	title       = {Sex Differences in Simultaneous Interpreting: {A} Corpus-Based Study},
   	addendum = {Poster presented at the CIUTI Forum 2017, Geneva},
   	year        = {2017},
 }
 
 @techreport{CorpasPastor2016,
-  	author 		= {Corpas Pastor, G. and Fern, L.},
+  	author 		= {Corpas Pastor, Gloria and Fern, Lily May},
   	title 		= {A Survey of Interpreters’ Needs and Practices Related to Language Technology},
   	numbers 	= {FFI2012-38881-MINECO/TI-DT-2016-1},
   	institution = {University of Málaga},
@@ -296,25 +296,25 @@
 }
 
 @misc{Costa2016,
-	author 		= {Costa, H. and Corpas Pastor, G. and Durán-Muñoz, I.},
+	author 		= {Costa, Hernani and Corpas Pastor, Gloria and Durán-Muñoz, Isabel},
 	title 		= {An Interpreters’ Guide to Selecting Terminology Management Tools},
 	year 		= {2016}
 }
 
 @incollection{Costa2018,
-  author       = {Costa, H. and Corpas Pastor, G. and Durán-Muñoz, I. }, 
+  author       = {Costa, Hernani and Corpas Pastor, Gloria and Durán-Muñoz, Isabel }, 
   title        = {Assessing Terminology Management Systems for Interpreters},
   booktitle    = {Trends in E-Tools and Resources for Translators and Interpreters},
   publisher    = {Brill},
   year         = {2018},
-  editor       = {Corpas Pastor, G. and Durán-Muñoz, I.},
+  editor       = {Corpas Pastor, Gloria and Durán-Muñoz, Isabel},
   pages        = {57--84},
   address      = {Leiden},
 }
 
 @book{Council2001,
-	address 	= {Cambridge, U.K.},
-	author 		= {Council of Europe},
+	address 	= {Cambridge},
+	author 		= {{Council of Europe}},
 	publisher 	= {Press Syndicate of the University of Cambridge},
 	title 		= {Common {European} Framework of Reference for Languages: {{L}}earning, Teaching, Assessment},
 	year 		= {2001}
@@ -332,7 +332,7 @@
 	address 	= {Bristol},
 	author 		= {Devaux, Jérôme},
 	booktitle 	= {Ideology, Ethics and Policy Development in Public Service Interpreting and Translation},
-	editor 		= {C. Valero Garcés and R. Tipton},
+	editor 		= {Valero Garcés, Carmen and Tipton, Rebecca},
 	pages 		= {131--150},
 	publisher 	= {Multilingual Matters},
 	title 		= {Virtual presence, ethics and videoconference interpreting: {I}nsights from court settings},
@@ -340,12 +340,11 @@
 }
 
 @phdthesis{Devaux2017b,
-	address 	= {Technologies in Interpreter-Mediated Criminal Court hearings},
 	author 		= {Devaux, Jérôme},
 	note 		= {Retrieved on 01 Mai 2018 from \url{https://open.academia.edu/JeromeDevaux}},
 	school 		= {University of Salford},
 	address 	= {Salford},
-	title 		= {An Actor-Network Theory Account of the Interpreter's Role-Space},
+	title 		= {Technologies in interpreter-mediated criminal court hearings an actor-network theory account of the interpreter’s perception of her role-space},
 	year 		= {2017}
 }
 
@@ -357,7 +356,7 @@
 }
 
 @misc{Europarl2001,
-	author 		= {European Parliament Interpretation Directorate},
+	author 		= {{European Parliament Interpretation Directorate}},
 	title 		= {Report on Remote Interpretation Test, 22-25 January 2001},
 	year 		= {2001},
 	address		= {Brussels},
@@ -366,14 +365,14 @@
 
 @phdthesis{Fantinuoli2012,
 	address 	= {Mainz},
-	author 		= {Fantinuoli, C.},
+	author 		= {Fantinuoli, Claudio},
 	publisher 	= {University of Mainz},
 	title 		= {Design and Implementation of a Terminology and Knowledge Management Software for Conference Interpreter},
 	year 		= {2012}
 }
 
 @article{Fantinuoli2017a,
-	author 		= {Fantinuoli, C},
+	author 		= {Fantinuoli, Claudio},
 	journal 	= {Translation \& Interpreting},
 	number 		= {2},
 	pages 		= {24--37},
@@ -383,7 +382,7 @@
 }
 
 @inproceedings{Fantinuoli2017b,
-  	author       = {Fantinuoli, C},
+  	author       = {Fantinuoli, Claudio},
   	title        = {Speech Recognition in the Interpreter Workstation},
   	date         = {2017},
   	booktitle    = {Proceedings of the Translating and the Computer 39 Conference},
@@ -392,9 +391,9 @@
 }
 
 @incollection{Fantinuoli2018,
-   	author 		= {Fantinuoli, C.},
+   	author 		= {Fantinuoli, Claudio},
    	title		= {Computer-Assisted Interpreting: {C}hallenges and Future Perspectives},
-   	editor 		= {Corpas Pastor, G. and Durán-Muñoz, I.},
+   	editor 		= {Corpas Pastor, Gloria and Durán-Muñoz, Isabel},
    	booktitle 	= {Trends in E-Tools and Resources for Translators and Interpreters},
    	publisher 	= {Brill},
    	year 		= {2018},
@@ -414,10 +413,10 @@
 }
 
 @incollection{Fowler2007, 
-	author 		= {Fowler, Y.},
+	author 		= {Fowler, Yvonne},
 	year		= {2007},
 	title 		= {Formative assessment: {U}sing peer and self-assessment in interpreter training},
-	editor 		= {Wadensjö, C. and  Dimitrova, B. E. and  Nilsson, A. L.}, 
+	editor 		= {Wadensjö, Cecilia and  Dimitrova, Birgitta Englund and  Nilsson, A. L.}, 
 	booktitle 	= {The Critical Link 4},
 	address 	= {Amsterdam},
 	publisher 	= {John Benjamins},
@@ -438,7 +437,7 @@
 	address 	= {Amsterdam},
 	author 		= {Fowler, Yvonne},
 	booktitle 	= {Interpreting in a Changing Landscape. {S}elected papers from Critical Link 6},
-	editor 		= {Schäffner, C. and Kredens, K. and Fowler, Y.},
+	editor 		= {Schäffner, Christina and Kredens, Krzysztof and Fowler, Yvonne},
 	pages 		= {226--248},
 	publisher 	= {John Benjamins},
 	title 		= {Business as usual? {P}rison video link in the multilingual courtroom},
@@ -470,7 +469,7 @@
 }
 
 @article{Gile1988,
-	author 		= {Gile, D.},
+	author 		= {Gile, Daniel},
 	journal 	= {The Interpreters' Newsletter},
 	pages 		= {4--22},
 	title 		= {{Le} partage de l'attention et le ‘modèle d'effort’ en interprétation simultanée},
@@ -478,16 +477,25 @@
 	year 		= {1988}
 }
 
+@article{Fantinuoli2018c,
+	author 		= {Fantinuoli, Claudio},
+	journal 	= {The Interpreters' Newsletter},
+	pages 		= {x--x},
+	title 		= {The use of comparable corpora in interpreting practice and teaching},
+	volume 		= {1},
+	year 		= {2018}
+}
+
 @book{Gile1995,
-	address 	= {John Benjamins},
-	author 		= {Gile, D.},
-	publisher 	= {Amsterdam/Philadelphia},
+	address 	= {Amsterdam/Philadelphia},
+	author 		= {Gile, Daniel},
+	publisher 	= {John Benjamins},
 	title 		= {Basic concepts and models for interpreter and translator training},
 	year 		= {1995}
 }
 
 @incollection{Gile1997,
-	author 		= {Gile, D.},
+	author 		= {Gile, Daniel},
 	year 		= {1997},
 	title 		= {Conference interpreting as a cognitive management problem},
 	bookauthor 	= {Danks, Joseph H. and Shreve, Gregory M. and Fountain, Stephen B. and McBeath, Michael},
@@ -498,7 +506,7 @@
 }
 
 @article{Gile1999,
-	author 		= {Gile, D},
+	author 		= {Gile, Daniel},
 	journal 	= {Hermes},
 	pages 		= {153--172},
 	title 		= {Testing the Tight Rope Hypothesis in Simultaneous Interpreting – {{A}} Contribution},
@@ -508,7 +516,7 @@
 
 @book{Gile2009,
 	address 	= {Amsterdam/Philadelphia},
-	author 		= {Gile, D.},
+	author 		= {Gile, Daniel},
 	publisher 	= {John Benjamins},
 	title 		= {Basic Concepts and Models for Interpreter and Translator Training},
 	year 		= {2009}
@@ -522,7 +530,7 @@
 }
 
 @article{Goldsmith2017,
-	author 		= {Goldsmith, J},
+	author 		= {Goldsmith, Josh},
 	journal 	= {Proceedings of Translating and the Computer},
 	pages 		= {40--50},
 	title 		= {A Comparative User Evaluation of Tablets and Tools for Consecutive Interpreters},
@@ -531,7 +539,7 @@
 }
 
 @article{Gorm2007,
-	author 		= {Gorm Hansen, I.  and  Shlesinger, M},
+	author 		= {Gorm Hansen, Inge  and  Shlesinger, Miriam},
 	journal 	= {Interpreting},
 	number 		= {1},
 	pages 		= {95--118},
@@ -544,7 +552,7 @@
 	author 		= {Grbic, Nadja},
 	year 		= {2001}, 
 	title 		= {First steps on firmer ground: {A} project for the further training of sign language interpreters in Austria},
-	editor 		= {Mason, I.},
+	editor 		= {Mason, Ian},
 	booktitle 	= {Triadic Exchanges - Studies in Dialogue Interpreting},
 	pages 		= {149--171}, 
 	address 	= {Manchester},
@@ -565,7 +573,7 @@
 	address 	= {Amsterdam/Philadelphia},
 	author 		= {Hale, Sandra},
 	booktitle 	= {Crossing Borders in Community Interpreting – definitions and dilemmas},
-	editor 		= {Valero Garcés, C. and Martin, A.},
+	editor 		= {Valero Garcés, Carmen and Martin, Anne},
 	pages 		= {203--230},
 	publisher 	= {John Benjamins},
 	title 		= {Controversies over the role of the court interpreter},
@@ -620,7 +628,7 @@
 
 @book{Jones2002,
 	address 	= {Abingdon/New York},
-	author 		= {Jones, R.},
+	author 		= {Jones, Roderick},
 	publisher 	= {Routledge},
 	title 		= {Conference Interpreting Explained},
 	year 		= {2002}
@@ -655,7 +663,7 @@
 }
 
 @article{Kantowitz1976,
-	author 		= {Kantowitz,B. H. and Knight, J. L},
+	author 		= {Kantowitz, Barry H. and Knight, J. L},
 	journal 	= {Acta Psychologica},
 	pages 		= {343--362},
 	title 		= {Testing tapping timesharing: {A}uditory secondary task},
@@ -666,7 +674,7 @@
 
 @book{Korak2010,
 	address 	= {Berlin},
-	author 		= {Korak, Christina.},
+	author 		= {Korak, Christina},
 	publisher 	= {Frank \& Timme},
 	title 		= {Remote interpreting via {S}kype: {A}nwendungsmöglichkeiten von {VoIP}-{S}oftware im {B}ereich {C}ommunity {I}nterpreting - {C}ommunicate everywhere?},
 	year 		= {2010}
@@ -674,7 +682,7 @@
 
 @phdthesis{Korpal2016,
 	address 	= {Poznan},
-	author 		= {Korpal, P.},
+	author 		= {Korpal, Pawel},
 	publisher 	= {Adam Mickiewicz University},
 	title 		= {Linguistic and Psychological Indicators of Stress in Simultaneous Interpreting},
 	year 		= {2016}
@@ -692,7 +700,7 @@
 }
 
 @article{Lamberger-Felber2001,
-	author 		= {Lamberger-Felber, H.},
+	author 		= {Lamberger-Felber, Heike},
 	journal 	= {Hermes},
 	pages 		= {39--63},
 	title 		= {Text-Oriented Research into Interpreting: {{{E}}}xamples from a Case-Study},
@@ -717,8 +725,8 @@
 }
 
 @article{Lee2005,
-	author 		= {Lee, Y.},
-	publisher 	= {Translators’ Journal},
+	author 		= {Lee, Yun-Hyang},
+	publisher 	= {Meta},
 	volume		= {50},
 	number 		= {4},
 	title 		= {Self-assessment as an autonomous learning tool in an interpretation classroom},
@@ -736,7 +744,7 @@
 }
 
 @article{Lesch2010,
-	author 		= {Lesch, H. M},
+	author 		= {Lesch, Harold},
 	journal 	= {Acta Academica},
 	number 		= {3},
 	pages 		= {38--60},
@@ -773,7 +781,7 @@
 }
 
 @article{Lim2014,
-	author 		= {Lim, L},
+	author 		= {Lim, Lily},
 	journal 	= {The Interpreter and Translator Trainer},
 	number 		= {1},
 	pages 		= {71--89},
@@ -815,11 +823,11 @@
 	booktitle 	= {Dolmetschen 3.0 -- Einblicke in einen Beruf im Wandel}, 
 	pages 		= {51--92}, 
 	address 	= {Berlin},
-	publisher 	= {Frank und Timme}
+	publisher 	= {Frank \& Timme}
 }
 
 @article{Mazza2001,
-	author 		= {Mazza, C},
+	author 		= {Mazza, Cristina},
 	journal 	= {The Interpreters’ Newsletter},
 	pages 		= {87--104},
 	title 		= {Numbers in Simultaneous Interpretation},
@@ -831,7 +839,7 @@
 	address 	= {Amsterdam/Philadelphia},
 	author 		= {Martin, Anne  and  Abril Martí, Isabel},
 	booktitle 	= {Crossing Borders in Community Interpreting: {D}efinitions and dilemmas},
-	editor 		= {Valero-Garcés C. and Martin, A.},
+	editor 		= {Valero-Garcés Carmen and Martin, Anne},
 	pages 		= {203--230},
 	publisher 	= {John Benjamins},
 	title 		= {Community interpreter self-perception: {A} spanish case study},
@@ -842,7 +850,7 @@
 	address 	= {Manchester/Kinderhook},
 	author 		= {Martin, Anne  and  Ortega Herráez, Juan Miguel},
 	booktitle 	= {Interpreting and Translating in Public Service Settings: {P}olicy, Practice, Pedagogy},
-	editor 		= {de Pedro Ricoy, R. and Perez, I. and Wilson, C.},
+	editor 		= {{de Pedro Ricoy}, Raquel and Perez, {Isabelle Anne} and Wilson, Christine},
 	pages 		= {141--155},
 	publisher 	= {St Jerome},
 	title 		= {Court interpreters' self perception: {A} spanish case study},
@@ -853,7 +861,7 @@
 	address 	= {Manchester},
 	author 		= {Mason, Ian},
 	booktitle 	= {Interpreting and Translation in Public Service Settings - Policy, Practice, Pedagogy},
-	editor 		= {De Pedro Ricoy, R. and Perez, I. and Wilson, C.},
+	editor 		= {{de Pedro Ricoy}, Raquel and Perez, {Isabelle Anne} and Wilson, Christine},
 	pages 		= {52--73},
 	publisher 	= {St Jerome},
 	title 		= {Role, positioning and discourse in face-to-face interpreting},
@@ -873,9 +881,9 @@
 
 @incollection{Mead2015,
 	address 	= {Abingdon/New York},
-	author 		= {Mead, P},
+	author 		= {Mead, Peter},
 	booktitle 	= {{Routledge} Encyclopedia of Interpreting Studies},
-	editor 		= {F. Pöchhacker},
+	editor 		= {Pöchhacker, Franz},
 	pages 		= {286--288},
 	publisher 	= {Routledge},
 	title 		= {Numbers},
@@ -886,7 +894,7 @@
 	address 	= {Manchester},
 	author 		= {Merlini, Raffaela},
 	booktitle 	= {Interpreting and Translating in Public Service Settings - Policy, Practice, Pedagogy},
-	editor 		= {De Pedro Ricoy, R. and Perez, I. and Wilson, C. W. L.},
+	editor 		= {{de Pedro Ricoy}, Raquel and Perez, {Isabelle Anne} and Wilson, Christine},
 	pages 		= {89--114},
 	publisher 	= {St Jerome},
 	title 		= {Interpreters in emergency wards. {A}n empirical study of doctor-interpreter-patient interaction},
@@ -907,7 +915,7 @@
 	address 	= {Guildford},
 	author 		= {Miler-Cassino, Joanna,  and  Rybińska, Zofia},
 	booktitle 	= {Videoconference and remote interpreting in criminal proceedings},
-	editor 		= {Braun, S. and Taylor, J. L.},
+	editor 		= {Braun, Sabine and Taylor, Judith L.},
 	pages 		= {117--136},
 	publisher 	= {University of Surrey},
 	title 		= {{AVIDICUS} comparative studies – part {III}: {T}raditional interpreting and videoconference interpreting in prosecution interviews},
@@ -943,7 +951,7 @@
 }
 
 @inproceedings{Motta2006,
-	author 		= {Motta, M.},
+	author 		= {Motta, Manuela},
 	year 		= {2006},
 	title		= {Evaluation of a blended tutoring program in conference interpreting},
 	editor 		= {Bastiaens, T. and Carliner, S.},
@@ -976,7 +984,7 @@
 	address 	= {Guildford},
 	author 		= {Napier, Jemina},
 	booktitle 	= {Videoconference and Remote Interpreting in Criminal Proceedings},
-	editor 		= {Braun, S. and Taylor, J. L.},
+	editor 		= {Braun, Sabine and Taylor, Judith L.},
 	pages 		= {145--185},
 	publisher 	= {University of Surrey},
 	title 		= {Here or there? {A}n assessment of video remote signed language interpreter-mediated interaction in court},
@@ -996,7 +1004,7 @@
 	address 	= {Amsterdam},
 	author 		= {Niska, Helge},
 	booktitle 	= {Interpreting in the 21st century: {C}hallenges and Opportunities},
-	editor 		= {Viezzi, M. and Garzone, G.},
+	editor 		= {Viezzi, Maurizio and Garzone, Giuliana},
 	pages 		= {133--144},
 	publisher 	= {John Benjamins},
 	title 		= {Community interpreting training: {P}ast, present and future},
@@ -1004,8 +1012,8 @@
 }
 
 @article{Orlando2014,
-	author 		= {Orlando, M},
-	journal 	= {Translation and Interpreting},
+	author 		= {Orlando, Mark},
+	journal 	= {Translation \& Interpreting},
 	number 		= {2},
 	pages 		= {39--54},
 	title 		= {A Study on the Amenability of Digital Pen Technology in a Hybrid Mode of Interpreting: {{C}}onsec-Simul with Notes},
@@ -1015,14 +1023,14 @@
 
 @book{Orlando2016,
 	address 	= {Berlin},
-	author 		= {Orlando, M.},
+	author 		= {Orlando, Mark},
 	publisher 	= {Timme},
 	title 		= {Training 21st Century Translators and Interpreters: {{A}}t the Crossroads of Practice, Research and Pedagogy},
 	year 		= {2016}
 }
 
 @article{Pinazo2008,
-	author 		= {Pinazo, E. P},
+	author 		= {Pinazo, E. Postigo},
 	journal 	= {{TTR}: traduction, termonologie, redaction},
 	number 		= {1},
 	pages 		= {173--209},
@@ -1032,7 +1040,7 @@
 }
 
 @article{Pinochi2009,
-	author 		= {Pinochi, D},
+	author 		= {Pinochi, Diletta},
 	journal 	= {The Interpreters’ Newsletter},
 	pages 		= {33--57},
 	title 		= {Simultaneous Interpretation of Numbers: {{C}}omparing German and English to Italian. {{A}}n Experimental Study},
@@ -1087,8 +1095,8 @@
 }
 
 @inproceedings{Prandi2017b,
-	author 		= {Prandi, B},
-	title 		= {Designing a Multimethod Study on the Use of {CA}I Tools during Simultaneous Interpreting},
+	author 		= {Prandi, Bianca},
+	title 		= {Designing a Multimethod Study on the Use of {CAI} Tools during Simultaneous Interpreting},
 	booktitle	= {Proceedings of the Translating and the Computer 39 Conference},
 	address		= {London},
 	year 		= {2017}
@@ -1096,7 +1104,7 @@
 
 @book{Pöchhacker1994,
 	address 	= {Tübingen},
-	author 		= {Pöchhacker, F.},
+	author 		= {Pöchhacker, Franz},
 	publisher 	= {Gunter Narr},
 	title 		= {Simultandolmetschen als komlpexes Handeln},
 	year 		= {1994}
@@ -1115,7 +1123,7 @@
 	journal 	= {Academic Medicine},
 	volume 	 	= {71},
 	number		= {10},
-	author 		= {Regehr, G. and Hodges, B. and Tiberius, R. and Lefchy, J.},
+	author 		= {Regehr, Glenn and Hodges, Brian and Tiberius, Richard and Lefchy, Jdoy},
 	publisher 	= {S52--S74},
 	title 		= {Measuring Self-assessment skills: {A}n innovative Relative Ranking Model},
 	year 		= {1996}
@@ -1132,10 +1140,10 @@
 }
 
 @incollection{Riccardi2002,
-	author 		= {Riccardi, A.},
+	author 		= {Riccardi, Alessandra},
 	year 		= {2002},
 	title 		= {Evaluation in Interpretation: Macro-criteria and Micro-criteria},
-	editor 		= {Hung, E.},
+	editor 		= {Hung, Eva},
 	booktitle 	= {Teaching Translation and Interpreting 4: {B}uilding Bridges},
 	address 	= {Amsterdam/Philadelphia},
 	publisher 	= {John Benjamins},
@@ -1146,7 +1154,7 @@
 	address 	= {Guildford},
 	author 		= {Rombouts, Dirk},
 	booktitle 	= {Videoconference and Remote Interpreting in Criminal Proceedings},
-	editor 		= {Braun, S. and Taylor, J.},
+	editor 		= {Braun, Sabine and Taylor, Judith L.},
 	pages 		= {159--166},
 	publisher 	= {University of Surrey},
 	title 		= {The police interview using videoconferencing with a legal interpreter: {A} critical view from the perspective of interview technique},
@@ -1157,7 +1165,7 @@
 	address 	= {Amsterdam/Philadelphia},
 	author 		= {Rosenberg, Brett Allen},
 	booktitle 	= {The Critical Link 4: {P}rofessionalisation of interpreting in the community},
-	editor 		= {Wadensjö, C. and Dimitrova, B. E. and Anna-Lena, N.},
+	editor 		= {Wadensjö, Cecilia and Dimitrova, B. Englund and Anna-Lena, Nilsson},
 	pages 		= {65--76},
 	publisher 	= {John Benjamins},
 	title 		= {A data-driven analysis of telephone interpreting},
@@ -1186,14 +1194,14 @@
 
 @book{Rütten2007,
 	address 	= {Frankfurt am Main},
-	author 		= {Rütten, A.},
+	author 		= {Rütten, Anja},
 	publisher 	= {Peter Lang},
 	title 		= {{I}nformations- und {W}issensmanagement im {K}onferenzdolmetschen},
 	year 		= {2007}
 }
 
 @incollection{Sandrelli2002,
-	author 		= {Sandrelli, A.},
+	author 		= {Sandrelli, Annalisa},
 	year 		= {2002},
 	title 		= {Computers in the training of interpreters: {C}urriculum design issues}, 
 	editor 		= {Garzone, G. and Viezzi, M. and Mead, P.},
@@ -1204,7 +1212,7 @@
 }
 
 @article{Sandrelli2007a,
-	author 		= {Sandrelli, A. and de Manuel Jerez, J},
+	author 		= {Sandrelli, Annalisa and {de Manuel Jerez}, Jesús},
 	journal 	= {The Interpreter and Translator Trainer},
 	number 		= {2},
 	pages 		= {269--303},
@@ -1214,10 +1222,10 @@
 }
 
 @inproceedings{Sandrelli2007b,
-	author 		= {Sandrelli, A.},
+	author 		= {Sandrelli, Annalisa},
 	year 		= {2007},
 	title 		= {Designing {CAIT} (Computer-Assisted Interpreter Training) Tools: Black Box}, 
-	editor 		= {Nauert, S.}, 
+	editor 		= {Nauert, Sandra}, 
 	booktitle 	= {Challenges of Multidimensional Translation, Proceedings of the Marie Curie Euroconferences. {MuTra}: Challenges of Multidimensional Translation},
 	address 	= {Saarbrücken},
 	year 		= {2005}
@@ -1225,7 +1233,7 @@
 
 @article{Sandrelli2015,
 	journal 	= {MonTI Special Issue 2},
-	author 		= {Sandrelli, A.},
+	author 		= {Sandrelli, Annalisa},
 	pages 		= {111–-138},
 	title		= {Becoming an Interpreter: {T}he Role of Computer Technology},
 	year 		= {2015}
@@ -1241,7 +1249,7 @@
 }
 
 @article{Seeber2011a,
-	author 		= {Seeber, K},
+	author 		= {Seeber, Kilian G.},
 	journal 	= {Interpreting},
 	number 		= {2},
 	pages 		= {176--204},
@@ -1261,12 +1269,12 @@
 }
 
 @incollection{Seeber2015,
-	author 		= {Seeber, K.},
+	author 		= {Seeber, Kilian G.},
 	title 		= {Simultaneous Interpreting},
 	year		= {2015},
-	editors		= {Mikkelsen, H. and Jourdenais, R.},
+	editors		= {Mikkelson, Holly and Jourdenais, Renée},
 	booktitle	= {The Routledge Handbook of Interpreting},
-	address		= {Oxon/New York},
+	address		= {Abingdon/New York},
 	publisher	= {Routledge}
 }
 
@@ -1280,7 +1288,7 @@
 }
 
 @misc{Seleskovitch1975,
-	author 		= {Seleskovitch, D.},
+	author 		= {Seleskovitch, Danica},
 	title 		= {Langage, Langue et Mémoire. {{{E}}}tude de la Prise de Notes en Interpretation Consécutive}, 
 	address 	= {Paris},
 	publisher 	= {Minard Lettres Modernes},
@@ -1296,8 +1304,8 @@
 
 @book{Setton1999,
 	address 	= {Amsterdam},
-	author 		= {Setton, R.},
-	publisher 	= {Benjamins},
+	author 		= {Setton, Robin},
+	publisher 	= {John Benjamins},
 	title 		= {Simultaneous Interpretation. {{A}} Cognitive-Pragmatic Analysis},
 	year 		= {1999}
 }
@@ -1313,19 +1321,19 @@
 }
 
 @misc{Technical2016,
-	author      = {Technical Compliance Team, DG Interpretation, European Commission},
+	author      = {{Technical Compliance Team, DG Interpretation, European Commission}},
 	title       = {Internal archives of the {European} Union},
 	year        = {2016}
 }
 
 @misc{TechTarget2017,
-	author 		= {TechTarget Network},
+	author 		= {{TechTarget Network}},
 	note        = {Retrieved on 31 October 2017 from \url{http://searchunifiedcommunications.techtarget.com/definitions/page/7}},
 	year 		= {2017}
 }
 
 @book{TelecommunicationUnion2009,
-	author 		= {International Telecommunication Union},
+	author 		= {{}International Telecommunication Union}},
 	year 		= {2009},
 	title 		= {Series H: {A}udiovisual and multimedia systems - {I}nfrastructure of audiovisual services},
 	note 		= {Retrieved on 18 October 2016 from \url{https://www.itu.int/rec/T-REC-H.323-200912-I/en}}
@@ -1343,7 +1351,7 @@
 
 @phdthesis{Timarova2012,
 	address 	= {Antwerp},
-	author 		= {Timarová, S.},
+	author 		= {Timarová, Šárka},
 	publisher 	= {KU Leuven},
 	title 		= {Working Memory in Simultaneous Interpreting},
 	year 		= {2012}
@@ -1357,10 +1365,10 @@
 }
 
 @inproceedings{vanRotterdam2011,
-	author 		= {van Rotterdam, Peter and van den Hoogen, Ronald},
+	author 		= {{van Rotterdam}, Peter and {van den Hoogen}, Ronald},
 	year		= {2011},
 	title 		= {True-to-life requirements for using videoconferencing in legal proceedings},
-	editor 		= {Braun, S. and Taylor, J.}, 
+	editor 		= {Braun, Sabine and Taylor, Judith L.}, 
 	booktitle	= {Videoconference and Remote Interpreting in Criminal Proceedings},
 	pages 		= {187--198},
 	address 	= {Guildford},
@@ -1385,7 +1393,7 @@
 }
 
 @article{Wickens1976,
-	author 		= {Wickens,C. D},
+	author 		= {Wickens, Christopher D.},
 	journal 	= {Journal of Experimental Psychology: {H}uman Perception and Performance},
 	pages 		= {1--13},
 	title 		= {The effects of divided attention on information processing in tracking},
@@ -1425,7 +1433,7 @@
 }
 
 @book{Will2009,
-	author 		= {Will, M},
+	author 		= {Will, Martin},
 	title 		= {Dolmetschorientierte {T}erminologiearbeit: {M}odell Und {M}ethode},
 	publisher 	= {Gunter Narr Verlag},
 	address		= {Tübingen},
@@ -1433,7 +1441,7 @@
 }
 
 @article{Will2015,
-	author 		= {Will, M},
+	author 		= {Will, Martin},
 	journal 	= {Zeitschrift Für Translationswissenschaft Und Fachkommunikation},
 	number 		= {1},
 	pages 		= {179--201},
@@ -1451,8 +1459,8 @@
 
 @book{Yu2016,
 	address 	= {London},
-	author 		= {Yu, D.,  and  Deng, L.},
+	author 		= {Yu, Dong,  and  Deng, Li},
 	publisher 	= {Springer},
-	title 		= {Automatic Speech Recognition (Signals an)},
+	title 		= {Automatic Speech Recognition. {A} Deep Learning Approach},
 	year 		= {2016}
 }
