Finished Appendix of chapter 3

--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -82,10 +82,10 @@
 	year 		= {2011}
 }
 
-@book{Barik1971,
+@article{Barik1971,
 	author 		= {Barik, Henri C.},
 	title 		= {A description of various types of omissions, additions, and errors of translation encountered in simultaneous interpretation},
-	publisher 	= {Meta},
+	journal 	= {Meta},
 	year		= {1971},
 }
 
@@ -147,17 +147,16 @@
 }
 
 @masterthesis{Biagini2015,
-	address 	= {Glossario cartaceo e glossario elettronico durante l'interpretazione simultanea: {U}no studio comparativo},
+	title 	= {Glossario cartaceo e glossario elettronico durante l'interpretazione simultanea: {U}no studio comparativo},
 	author 		= {Biagini, Giulio},
-	school 		= {{U}niversità di {T}rieste},
-	address 	= {Trieste},
+	publisher 		= {{U}niversità di {T}rieste},
+	address 	= {{U}niversità di {T}rieste},
 	year 		= {2015}
 }
 
 @article{Bonner2013,
 	author 		= {Bonner, William},
 	journal 	= {Journal of Information Technology},
-	doi 		= {10.1057/jit.2013.6},
 	number 		= {2},
 	pages 		= {111--123},
 	title 		= {History and {IS} - {B}roadening our view and understanding: {A}ctor-Network Theory as a methodology},
@@ -233,7 +232,7 @@
 	booktitle 	= {Routledge Handbook of Interpreting}, 
 	address 	= {Abingdon/New York},
 	publisher 	= {Routledge},
-	note 		= {Retrieved 31 October 2017 from \url{https://www.researchgate.net/publication/280305163_Remote_Interpreting}}
+	note 		= {Retrieved on 31 October 2017 from \url{https://www.researchgate.net/publication/280305163_Remote_Interpreting}}
 }
 
 @article{Braun2016a,
@@ -323,8 +322,8 @@
 @masterthesis{DeMerulis2013,
 	title 		= {L’uso di InterpretBank per la preparazione di una conferenza sul trattamento delle acque reflue: {L}ossario terminologico e contributo sperimentale},
 	author 		= {De Merulis, Gianpiero},
-	school 		= {{U}niversità di {B}ologna},
-	address 	= {Bologna},
+	publisher 		= {{U}niversità di {B}ologna},
+	address 	= {{U}niversità di {B}ologna},
 	year 		= {2013}
 }
 
@@ -341,7 +340,7 @@
 
 @phdthesis{Devaux2017b,
 	author 		= {Devaux, Jérôme},
-	note 		= {Retrieved on 01 Mai 2018 from \url{https://open.academia.edu/JeromeDevaux}},
+	note 		= {Retrieved on 1 Mai 2018 from \url{https://open.academia.edu/JeromeDevaux}},
 	school 		= {University of Salford},
 	address 	= {Salford},
 	title 		= {Technologies in interpreter-mediated criminal court hearings an actor-network theory account of the interpreter’s perception of her role-space},
@@ -351,7 +350,7 @@
 @misc{Ellis2004,
 	author      = {Ellis, Ronald},
 	title       = {Videoconferencing in refugee hearings},
-	url         = {Retrieved on 17 December, 2016, from http://www.irb-cisr.gc.ca/Eng/transp/ReviewEval/Pages/Video.aspx#author},
+	url         = {Retrieved on 17 December 2016 from http://www.irb-cisr.gc.ca/Eng/transp/ReviewEval/Pages/Video.aspx#author},
 	year        = {2004}
 }
 
@@ -418,7 +417,7 @@
 	title 		= {Formative assessment: {U}sing peer and self-assessment in interpreter training},
 	editor 		= {Wadensjö, Cecilia and  Dimitrova, Birgitta Englund and  Nilsson, A. L.}, 
 	booktitle 	= {The Critical Link 4},
-	address 	= {Amsterdam},
+	address 	= {Amsterdam/Philadelphia},
 	publisher 	= {John Benjamins},
 	pages 		= {253--262}
 }
@@ -434,7 +433,7 @@
 }
 
 @incollection{Fowler2013,
-	address 	= {Amsterdam},
+	address 	= {Amsterdam/Philadelphia},
 	author 		= {Fowler, Yvonne},
 	booktitle 	= {Interpreting in a Changing Landscape. {S}elected papers from Critical Link 6},
 	editor 		= {Schäffner, Christina and Kredens, Krzysztof and Fowler, Yvonne},
@@ -448,15 +447,15 @@
 	author 		= {Fullwood, Chris and Judd, Amy  and  Finn, Mandy},
 	title 		= {The effect of initial meeting context and video-mediation on jury perceptions of an eyewitness},
 	journal 	= {Internet Journal of Criminology},
-	url = {Retrieved on 1 August, 2012, from http://www.internetjournalofcriminology.com/Fullwood,\%20Judd\%20&\%20Finn\%20-\%20Video\%20Mediation.pdf},
+	url = {Retrieved on 1 August 2012 from http://www.internetjournalofcriminology.com/Fullwood,\%20Judd\%20&\%20Finn\%20-\%20Video\%20Mediation.pdf},
 	year = {2008}
 }
 
 @masterthesis{Gacek2015,
 	author 		= {Gacek, Michael},
 	title 		= {{S}oftwarelösungen für {D}olmetscher{I}nnen},
-	school 		= {University of {V}ienna},
-	address 	= {Vienna},
+	publisher 		= {University of {V}ienna},
+	address 	= {University of {V}ienna},
 	year 		= {2015}
 }
 
@@ -525,7 +524,7 @@
 @masterthesis{Gigliobianco2017,
 	author 		= {Gigliobianco, Sebastiano},
 	title 		= {{D}igitalisierung von {A}rbeitsplätzen von {K}onferenzdolmetschern: {S}kizzierung eines modellhaften {A}ufbaus eines zukunftsfähigen {A}rbeitsplatzes von {K}onferenzdolmetschern unter {B}erücksichtigung aktueller technologischer {E}ntwicklungen anhand eines {V}ersuchs mit praktizierenden {P}robanden},
-	institute	= {{S}prachen und {D}olmetscher {I}nstitut {M}ünchen},
+	address	= {{S}prachen und {D}olmetscher {I}nstitut {M}ünchen},
 	year        = {2017}
 }
 
@@ -596,7 +595,7 @@
 
 @techreport{ISO2603,
 	type 		= {Standard},
-	key 		= {ISO 2603:2016},
+	author 		= {{ISO 2603:2016}},
 	year 		= {2016},
 	title 		= {Simultaneous interpreting – Permanent booths – Requirements},
 	institution = {International Organization for Standardization}
@@ -604,7 +603,7 @@
 
 @techreport{ISO4043,
 	type 		= {Standard},
-	key 		= {ISO 4043:2016},
+	author 		= {{ISO 4043:2016}},
 	year 		= {2016},
 	title 		= {Simultaneous interpreting – Mobile booths - Requirements},
 	institution = {International Organization for Standardization}
@@ -612,7 +611,7 @@
 
 @techreport{ISO20108,
 	type 		= {Standard},
-	key 		= {ISO 20108:2016},
+	author 		= {{ISO 20108:2016}},
 	year 		= {2016},
 	title 		= {Simultaneous interpreting - Quality and transmission of sound and image input - Requirements},
 	institution = {International Organization for Standardization}
@@ -620,7 +619,7 @@
 
 @techreport{ISO20109,
 	type 		= {Standard},
-	key 		= {ISO 20109:2016},
+	author 		= {{ISO 20109:2016}},
 	year 		= {2016},
 	title 		= {Simultaneous interpreting - Equipment - Requirements},
 	institution = {International Organization for Standardization}
@@ -649,7 +648,7 @@
 	journal 	= {Lebende Sprachen},
 	number 		= {1},
 	pages 		= {1--5},
-	title 		= {Die Arbeitswelt des Konferenzdolmetschers nach neuen {ISO}- und {IEC}-Normen},
+	title 		= {Die {A}rbeitswelt des {K}onferenzdolmetschers nach neuen {ISO}- und {IEC}-Normen},
 	volume 		= {29},
 	year 		= {1984}
 }
@@ -726,7 +725,7 @@
 
 @article{Lee2005,
 	author 		= {Lee, Yun-Hyang},
-	publisher 	= {Meta},
+	journal 	= {Meta},
 	volume		= {50},
 	number 		= {4},
 	title 		= {Self-assessment as an autonomous learning tool in an interpretation classroom},
@@ -847,7 +846,7 @@
 }
 
 @incollection{Martin2009,
-	address 	= {Manchester/Kinderhook},
+	address 	= {Manchester},
 	author 		= {Martin, Anne  and  Ortega Herráez, Juan Miguel},
 	booktitle 	= {Interpreting and Translating in Public Service Settings: {P}olicy, Practice, Pedagogy},
 	editor 		= {{de Pedro Ricoy}, Raquel and Perez, {Isabelle Anne} and Wilson, Christine},
@@ -1001,7 +1000,7 @@
 }
 
 @incollection{Niska2002,
-	address 	= {Amsterdam},
+	address 	= {Amsterdam/Philadelphia},
 	author 		= {Niska, Helge},
 	booktitle 	= {Interpreting in the 21st century: {C}hallenges and Opportunities},
 	editor 		= {Viezzi, Maurizio and Garzone, Giuliana},
@@ -1063,9 +1062,9 @@
 }
 
 @masterthesis{Prandi2015a,
-	address 	= {Bologna},
+	address 	= {{U}niversità di {B}ologna},
 	author 		= {Prandi, Bianca},
-	school 		= {{U}niversità di {B}ologna},
+	publisher 		= {{U}niversità di {B}ologna},
 	title 		= {L'uso di {I}nterpret{B}ank nella didattica dell'interpretazione: {U}no studio esplorativo},
 	year 		= {2015}
 }
@@ -1224,7 +1223,7 @@
 @inproceedings{Sandrelli2007b,
 	author 		= {Sandrelli, Annalisa},
 	year 		= {2007},
-	title 		= {Designing {CAIT} (Computer-Assisted Interpreter Training) Tools: Black Box}, 
+	title 		= {Designing {CAIT} (Computer-Assisted Interpreter Training) Tools: {B}lack {B}ox}, 
 	editor 		= {Nauert, Sandra}, 
 	booktitle 	= {Challenges of Multidimensional Translation, Proceedings of the Marie Curie Euroconferences. {MuTra}: Challenges of Multidimensional Translation},
 	address 	= {Saarbrücken},
@@ -1303,7 +1302,7 @@
 }
 
 @book{Setton1999,
-	address 	= {Amsterdam},
+	address 	= {Amsterdam/Philadelphia},
 	author 		= {Setton, Robin},
 	publisher 	= {John Benjamins},
 	title 		= {Simultaneous Interpretation. {{A}} Cognitive-Pragmatic Analysis},
@@ -1333,7 +1332,7 @@
 }
 
 @book{TelecommunicationUnion2009,
-	author 		= {{}International Telecommunication Union}},
+	author 		= {{International Telecommunication Union}},
 	year 		= {2009},
 	title 		= {Series H: {A}udiovisual and multimedia systems - {I}nfrastructure of audiovisual services},
 	note 		= {Retrieved on 18 October 2016 from \url{https://www.itu.int/rec/T-REC-H.323-200912-I/en}}
