Updates from ShareLaTeX

--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -1449,7 +1449,17 @@
 	year 		= {2015}
 }
 
-@phdthesis{Xu2015,
+@article{Xu2015,
+	author 		= {Xu, Ran},
+	title 		= {Corpus-based terminological preparation for simultaneous interpreting},
+    journal 	= {Interpreting},
+	number 		= {1},
+	pages 		= {29--58},
+	volume 		= {20},
+	year 		= {2018}
+}
+
+@phdthesis{Xu2015c,
 	author 		= {Xu, Ran},
 	title 		= {Terminology Preparation for Simultaneous Interpreters},
 	school 		= {{U}niversity of {L}eeds},
