--- a/localpackages.tex
+++ b/localpackages.tex
@@ -1,9 +1,4 @@
 % add all extra packages you need to load to this file 
-\usepackage{graphicx}
-\usepackage{tabularx}
-\usepackage{amsmath} 
-\usepackage{multicol}
-\usepackage{lipsum}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%                                              %%%
 %%%           Examples                           %%%
@@ -11,7 +6,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % remove the percentage signs in the following lines
 % if your book makes use of linguistic examples
-\usepackage{langsci/styles/langsci-gb4e} 
+
+\usepackage{graphicx}
+\usepackage{tabularx}
+\usepackage{amsmath} 
+\usepackage{multicol}
+\usepackage{lipsum}
 \usepackage{langsci/styles/langsci-optional} 
 \usepackage{langsci/styles/langsci-lgr}
 \usepackage{morewrites} 
@@ -20,8 +20,9 @@
 
 \usepackage{hhline}
 \usepackage{tabularx}
+\usepackage{multirow}
 \usepackage[linguistics]{forest}
-\usetikzlibrary{arrows,arrows.meta}
+\usetikzlibrary{arrows,arrows.meta,matrix,backgrounds}
 %compatibility of pgfplots and forest, see http://tex.stackexchange.com/a/330076
 \makeatletter
 \let\pgfmathModX=\pgfmathMod@
@@ -47,3 +48,5 @@
 \DeclareSIUnit[number-unit-product={}]{\percent}{\%}
 \makeatletter \def\new@fontshape{} \makeatother
 \robustify\bfseries % For detect weight to work
+
+\usepackage{langsci/styles/langsci-gb4e} 
