Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 %%%                                              %%%
 %%%     Language Science Press Master File       %%%
 %%%         follow the instructions below        %%%
-%%%                                              %%%
+%%%                                              %%% 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
  
 % Everything following a % is ignored
@@ -60,7 +60,8 @@
 %%%             Chapters                         %%%
 %%%                                              %%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
- 
+  
+ \includepaper{chapters/00} 
  %\includepaper{chapters/01} 
  \includepaper{chapters/02} 
  %\includepaper{chapters/03} 
