--- a/localpackages.tex
+++ b/localpackages.tex
@@ -7,6 +7,7 @@
 % remove the percentage signs in the following lines
 % if your book makes use of linguistic examples
 
+\usepackage{enumitem}
 \usepackage{graphicx}
 \usepackage{tabularx}
 \usepackage{amsmath} 
